[gd_scene load_steps=26 format=3 uid="uid://v4lnugtph4cp"]

[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="1_8ic3i"]
[ext_resource type="Script" uid="uid://cvx3e1yr5tho7" path="res://addons/stretcher_nonpickable.gd" id="1_yq2fn"]
[ext_resource type="PackedScene" uid="uid://bsbm7h7llfan3" path="res://assets/stretcher.glb" id="2_w6mv8"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="3_8v660"]
[ext_resource type="Resource" uid="uid://bd1dxftyxdgup" path="res://assets/meshes/interactables/pose_grab_wheel_left.tres" id="4_w6mv8"]
[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="6_jdhm7"]
[ext_resource type="Resource" uid="uid://dsiujx4dllwvd" path="res://assets/meshes/interactables/pose_grab_wheel_right.tres" id="6_mdk2q"]
[ext_resource type="PackedScene" uid="uid://ca3daqmpo0tua" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_redirect.tscn" id="7_yq2fn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yq2fn"]
size = Vector3(1.213, 0.15, 2.292)

[sub_resource type="BoxMesh" id="BoxMesh_jdhm7"]
size = Vector3(1.2, 0.15, 2.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_mdk2q"]
top_radius = 0.06
bottom_radius = 0.06
height = 1.5

[sub_resource type="BoxMesh" id="BoxMesh_yq2fn"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mdk2q"]
radius = 0.085
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yq2fn"]
radius = 0.085
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f8pag"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_w6mv8"]
material = SubResource("StandardMaterial3D_f8pag")
radius = 0.1
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k55h8"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jdhm7"]
material = SubResource("StandardMaterial3D_k55h8")
radius = 0.05
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rj7r8"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mdk2q"]
material = SubResource("StandardMaterial3D_rj7r8")
radius = 0.05
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8xfjp"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_p7qsh"]
material = SubResource("StandardMaterial3D_8xfjp")
radius = 0.1
height = 0.25

[sub_resource type="CylinderMesh" id="CylinderMesh_2da2n"]
top_radius = 0.12
bottom_radius = 0.12
height = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p7qsh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2da2n"]
albedo_color = Color(0.804493, 0.415365, 0, 1)

[node name="stretcher_nonpickable" type="AnimatableBody3D"]
script = ExtResource("1_yq2fn")

[node name="stretcher2" parent="." instance=ExtResource("2_w6mv8")]
transform = Transform3D(1.255, 0, 0, 0, 1.255, 0, 0, 0, 1.255, 0, 0, 0)

[node name="CollisionShape3D6" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_yq2fn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00192997, 0)
visible = false
gi_mode = 0
mesh = SubResource("BoxMesh_jdhm7")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.496081, 0, 1.61603)
visible = false
mesh = SubResource("CylinderMesh_mdk2q")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.490292, 0, 1.61878)
visible = false
mesh = SubResource("CylinderMesh_mdk2q")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.507439, 0, -1.61358)
visible = false
mesh = SubResource("CylinderMesh_mdk2q")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.497067, 0, -1.6167)
visible = false
mesh = SubResource("CylinderMesh_mdk2q")

[node name="DebugCube1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.04548, 0.00865197, -0.00533247)
visible = false
mesh = SubResource("BoxMesh_yq2fn")

[node name="DebugCube2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.018, 0, 0)
visible = false
mesh = SubResource("BoxMesh_yq2fn")

[node name="GrabPointBaseLeft" parent="." instance=ExtResource("1_8ic3i")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.559446, 0.062, 1.64135)
visible = true
hand_pose = ExtResource("4_w6mv8")
drive_angle = 0.0

[node name="GrabPointBaseRight" parent="." instance=ExtResource("3_8v660")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.570583, 0.059, 1.63803)
visible = true
hand_pose = ExtResource("6_mdk2q")
drive_angle = 0.0

[node name="PickableObject2" parent="." instance=ExtResource("6_jdhm7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.565, 0, 1.5)
freeze = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PickableObject2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_mdk2q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PickableObject2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -7.80821e-05, 0.000393867, 0.00173259)
visible = false
mesh = SubResource("CapsuleMesh_yq2fn")
skeleton = NodePath("../../PickableObject2")

[node name="GrabPointRedirect" parent="PickableObject2" node_paths=PackedStringArray("target") instance=ExtResource("7_yq2fn")]
target = NodePath("../../GrabPointBaseLeft")

[node name="PickableObject" parent="." instance=ExtResource("6_jdhm7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.566, 0, 1.5)
freeze = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="PickableObject"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_yq2fn")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PickableObject"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_mdk2q")

[node name="GrabPointRedirect" parent="PickableObject" node_paths=PackedStringArray("target") instance=ExtResource("7_yq2fn")]
target = NodePath("../../GrabPointBaseRight")

[node name="Injured" type="Node3D" parent="."]
transform = Transform3D(1.395, 0, 0, 0, 1.395, 0, 0, 0, 1.395, 0, 0.13, -0.24)

[node name="Mesh" type="Node3D" parent="Injured"]
transform = Transform3D(2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Injured/Mesh"]
mesh = SubResource("CapsuleMesh_w6mv8")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Injured/Mesh"]
transform = Transform3D(0.991903, -0.126995, 0, 0.126995, 0.991903, 0, 0, 0, 1, 0.0681005, -0.334436, 0)
mesh = SubResource("CapsuleMesh_jdhm7")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Injured/Mesh"]
transform = Transform3D(0.991894, 0.127065, 0, -0.127065, 0.991894, 0, 0, 0, 1, -0.068, -0.334436, 0)
mesh = SubResource("CapsuleMesh_jdhm7")

[node name="ArmMesh" type="MeshInstance3D" parent="Injured/Mesh"]
transform = Transform3D(0.724172, -0.68962, 0, 0.68962, 0.724172, 0, 0, 0, 1, 0.187, 0.048, 0)
mesh = SubResource("CapsuleMesh_mdk2q")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Injured/Mesh"]
transform = Transform3D(0.724172, 0.68962, 0, -0.68962, 0.724172, 0, 0, 0, 1, -0.187, 0.048, 0)
mesh = SubResource("CapsuleMesh_jdhm7")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Injured/Mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.283861, 0)
mesh = SubResource("SphereMesh_p7qsh")

[node name="BandageStage2" type="MeshInstance3D" parent="Injured"]
transform = Transform3D(0.724172, -0.68962, 0, -3.01442e-08, -3.16546e-08, 1, -0.68962, -0.724172, -4.37114e-08, 0.455539, 0.000764482, -0.00810447)
mesh = SubResource("CylinderMesh_2da2n")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.199247, -2.44877)
visible = false
mesh = SubResource("CapsuleMesh_p7qsh")
surface_material_override/0 = SubResource("StandardMaterial3D_2da2n")
